Updates: cv in English, some descriptions changed

--- a/about.html
+++ b/about.html
@@ -8,13 +8,13 @@
     </head>
     <body>
 
-        <header class="header">
-            <nav class="header__menu">
-                <a class="header__menu__link" href="index.html">Home</a>
-                <a class="header__menu__link" href="about.html">Sobre mí</a>
-            </nav>
-
-        </header> 
+    <header class="header">
+        <nav class="header__menu">
+            <a class="header__menu__link" href="index.html">Home</a>
+            <a class="header__menu__link" href="about.html">Sobre mí</a>
+            <a class="header__menu__link" href="cvAntoI.html">Mi CV en inglés</a>
+        </nav>
+    </header> 
 
         <main class="presentacion">
             <section class="presentacion__contenido">
@@ -53,7 +53,7 @@
         </div>
           
         <footer class="footer">
-            <p>Desarrollado por Antonieta Rodríguez Dolores</p>
+            <p>Desarrollado por Antonieta RD</p>
         </footer>
     </body>
 </html>
