--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <a class="header__menu__link" href="index.html">Home</a>
             <a class="header__menu__link" href="about.html">Sobre mí</a>
             <a class="header__menu__link" href="cvAntoI.html">Mi CV en inglés</a>
+            <a class="header__menu__link" href="videosDemo.html">Videos demo de proyectos ITC</a>
         </nav>
     </header>
 
